# lmdbot

./: .gitignore  Cargo.toml  README.md
src/: bob_generator.rs  handler.rs  lotto_generator.rs  main.rs  role_matcher.rs  twitter.rs
