[package]
name = "dsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
qstring = "0.7.2"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
regex = "1"
rand = "0.6.5"

# Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

